# git-remote-rclone

./: Makefile  README.md  git-remote-rclone  git-remote-restic  git-remote-restic.cabal  go.mod  pyproject.toml
app/: Main.hs
cmd/git-remote-restic/: main.go
git_remote_restic/: git.py  restic.py  run_cmd.py  run_cmd_test.py
test/: git-fetch-pull.bats  git-push.bats  setup_suite.bash
tests/: foo_test.py
