cabal-version:      3.4
name:               git-remote-restic
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable git-remote-restic
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0
      , directory >=1.3.8.3
      , process >=1.6.18.0
    hs-source-dirs:   app
    default-language: GHC2021
